# pork_scissors_paper_dj_back

./: pyproject.toml
rsp/: .env.example  manage.py
rsp/context_app/: apps.py  models.py
rsp/my_library_app/: admin.py  apps.py  models.py
rsp/my_library_app/api/: serializers.py  urls.py  views.py
rsp/my_library_app/migrations/: 0001_initial.py  0002_rename_librarygames_games.py  0003_alter_games_game_name.py
rsp/my_user_app/: admin.py  apps.py  models.py
rsp/my_user_app/api/: serializers.py  urls.py  views.py
rsp/my_user_app/migrations/: 0001_initial.py  0002_customuser_date_create_customuser_date_delete_and_more.py  0003_alter_customuser_options.py  0004_alter_customuser_phone.py  0005_alter_customuser_phone.py
rsp/rsp/: settings.py  urls.py  wsgi.py
